--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ repositories {
 }
 
 dependencies {
+    compile 'commons-codec:commons-codec:1.9'
     testCompile 'junit:junit:4.11'
     testCompile 'org.mockito:mockito-core:1.9.5'
 }
