--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
 
 dependencies {
     compile 'commons-codec:commons-codec:1.9'
+    compile 'org.projectlombok:lombok:1.12.6'
     testCompile 'junit:junit:4.11'
     testCompile 'org.mockito:mockito-core:1.9.5'
 }
