--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,14 @@ language: java
 
 jdk:
   - oraclejdk8
+
+notifications:
+  irc:
+    channels:
+      - "chat.freenode.net#bitledger"
+    template:
+      - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
+      - "Duration: %{duration}"
+      - "Change view : %{compare_url}"
+      - "Build details : %{build_url}"
+    use_notice: true
