--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,15 @@ jdk:
 notifications:
   irc:
     channels:
-      - "chat.freenode.net#bitledger"
+      - chat.freenode.net#bitledger
     template:
-      - "%{message} (%{repository}#%{build_number}, %{duration})"
-      - "%{repsitory}/%{branch} %{commit} %{author}: %{commit_message}"
-      - "%{build_url}"
+      - '%{message} (%{repository}#%{build_number}, %{duration})'
+      - '%{repsitory}/%{branch} %{commit} %{author}: %{commit_message}'
+      - '%{build_url}'
     on_success: change
     on_failure: always
     use_notice: true
     skip_join: true
 
 after_success:
- - .travis/publish-javadoc.sh
+  - .travis/publish-javadoc.sh
