Customize Javadoc output

--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,8 @@ dependencies {
     testCompile 'junit:junit:4.11'
     testCompile 'org.mockito:mockito-core:1.9.5'
 }
+
+javadoc {
+    options.header = title
+    options.author = true
+}
