--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,17 @@ notifications:
     use_notice: true
     skip_join: true
 
+script: ./gradlew publishSnapshot
+
 after_success:
   - .travis/publish-javadoc.sh
 
+# see http://docs.travis-ci.com/user/build-configuration/#Secure-environment-variables
 env:
   global:
-    secure: Ph9YFafQEJJS2YopQwr6QHNdGuQADareAqSGNlXOaDXxecMJU/+go+BBOykaVotSiFJjvcDDt9xOxKjGj75TltiDC+iNGrA0Nv//WDPTVreOTgBRcFqS32JEF3ZFb0b/nY2tNRh6Ub8Cy4PlYj9p1RYTWOqGGCQwTbMtrRvhCvk=
+    # authentication pair for publishing snapshots to oss.jfrog.org and releases to Bintray
+    # see http://www.gradle.org/docs/current/userguide/userguide_single.html#sec:gradle_properties_and_system_properties
+    - ORG_GRADLE_PROJECT_bintrayUser: cbeams
+    - secure: 'JLI+1InMh3PYsHiOoLKbtsY8fxz3uTcoP0UAWl+UwZ6chN/6rstvRu5gsbSrY69qOi7IEsWGXmuM5jfb9FoRKKml1Yoy8aHToH98qbaY2zs3pO9STJXoA56arVHCTMGyMloxhY+1UgoB5yi3tQuzvZQUTiH6sgEM4ljnSzUu54Y='
+    # GH_TOKEN as used during for publishing javadoc to gh-pages
+    - secure: 'Ph9YFafQEJJS2YopQwr6QHNdGuQADareAqSGNlXOaDXxecMJU/+go+BBOykaVotSiFJjvcDDt9xOxKjGj75TltiDC+iNGrA0Nv//WDPTVreOTgBRcFqS32JEF3ZFb0b/nY2tNRh6Ub8Cy4PlYj9p1RYTWOqGGCQwTbMtrRvhCvk='
