Configure Gradle to sign artifacts

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,16 @@ artifacts {
 
 
 // ----------------------------------------------------------------------------
+// Configure signing artifacts
+// ----------------------------------------------------------------------------
+apply plugin: 'signing'
+
+signing {
+    sign configurations.archives
+}
+
+
+// ----------------------------------------------------------------------------
 // Configure publication of Maven-compatible artifacts and metadata
 // ----------------------------------------------------------------------------
 apply plugin: 'maven-publish'
