Use redcarpet vs. kramdown to support code fences
Code fences trigger syntax highlighting in Atom and other editors.
Liquid {% highlight %} templates do not.

Redcarpet supports rendering both code fences and liquid highlight
blocks, but kramdown supports only the latter.

Thus switching to redcarpet. The outcome on the site is no different;
it's just the editing experience that improves.

--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ baseurl: ""
 url: "http://bitledger.io"
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
 permalink: /blog/:year/:month/:day/:title
