--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ repositories {
 dependencies {
     compile 'commons-codec:commons-codec:1.9'
     compile 'org.projectlombok:lombok:1.12.6'
+    compile 'org.zeromq:jeromq:0.3.4'
     testCompile 'junit:junit:4.11'
     testCompile 'org.mockito:mockito-core:1.9.5'
 }
