--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'commons-codec:commons-codec:1.9'
     compile 'org.projectlombok:lombok:1.12.6'
     compile 'org.zeromq:jeromq:0.3.4'
+    //compile 'org.zeromq:jzmq:3.0.1'
     testCompile 'junit:junit:4.11'
     testCompile 'org.mockito:mockito-core:1.9.5'
 }
